--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 <body>
     <div>
     <h1>Uso de github en Duoc</h1>
-    <img src="img/descarga.jpg" alt="github logo">
 </div>
+    <h3> Este es el logo de git</h3>
+    <img src="img/descarga.jpg" alt="github logo">
 </body>
 </html>
