--- a/index.html
+++ b/index.html
@@ -12,5 +12,6 @@
 </div>
     <h3> Este es el logo de git</h3>
     <img src="img/descarga.jpg" alt="github logo">
+    <p>esto es otro cambio</p>
 </body>
 </html>
